Version 1.1.0
-------------------------------------------------------------------------
7 Feb 2008
+ Made compatible with File Cabinet 2.0
+ Styled the admin links
+ Updated: templates/page/basic.tpl, templates/page/prev_next.tpl,
templates/page/short_links.tpl,
templates/page/verbose_links.tpl, templates/style.css

Version 1.0.1
-------------------------------------------------------------------------
29 October 2007
+ The front page indicator (yes/no) is now linkable.
+ The volume listing is restricted by edit rights.

26 October 2007
+ canEdit function in Volume fixed.

17 October 2007
+ Labeled Feature and Delete page permissions as Unrestricted only
+ Moved permission checks out to individual commands.
+ Added missing disapprove function.
+ Restricted users can no longer join, move, de/activate pages.
+ When restricted users added pages, they weren't showing up when
  trying to edit again.
+ Removed delete, de/activate and move options from web page listing
  for restricted users.
+ Added canEdit function to volume to ease permission checks.
+ Commented drop down box on page listing to hide area for restricted
  users. 
+ Updated: templates/forms/list.tpl

Version 1.0.0
-------------------------------------------------------------------------
21 September 2007
+ New volumes will forward the user to the add page form after header
  creation. 
+ View permissions are now observed in the list pages screen.
+ Using new link_title option in Control Panel so the shortened tabs
  have more information.
+ Fixed: On failing allowView, the volume would forward the user to
  the login screen. If the user was already logged in however, they
  would get to see the Volume anyway.

20 September 2007
+ Several permission checks were not using the correct item name
  (volume).
+ Approval tab is no longer seen by restricted users.
+ Removed duplicate approval call.
+ Fixed: Approval pages where not limited by volume number causing all