@@ -9,6 +9,10 @@ if (!defined('PHPWS_SOURCE_DIR')) {
     exit();
 }
 
+if (isset($_GET['var1'])) {
+    PHPWS_Core::plugForward('id');
+}
+
 if (isset($_REQUEST['wp_user'])) {
     PHPWS_Core::initModClass('webpage', 'User.php');
     Webpage_User::main();
